# GitFlix

./: .gitignore  AGENTS.md  README.md
backend/: main.py  pyproject.toml  requirements.txt  schemas.py  test_analytics.py  test_ingestion.py  test_main.py  test_schemas.py
backend/agent/: director.py  llm_balancer.py  tools.py
backend/analytics/: analyzer.py
backend/ingestion/: github_client.py
docs/superpowers/plans/: 2026-06-20-frontend-redesign.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: NavBar.tsx
frontend/src/remotion/: GitflixVideo.tsx  types.ts
frontend/src/remotion/scenes/: S02Cast.tsx  S05GhostTowns.tsx  S06HeroCommit.tsx  S07FinalState.tsx
frontend/src/screens/: ErrorScreen.tsx  InputScreen.tsx  LoadingScreen.tsx  PreviewScreen.tsx
memory/: MEMORY.md  feedback_preserve_comments.md
